# DisCXXord

./: .gitignore  .gitmodules  Attachement.cpp  Attachement.hpp  CMakeLists.txt  CategoryChannel.cpp  CategoryChannel.hpp  Channel.cpp  Channel.hpp  Client.cpp  Client.hpp  Date.cpp  Date.hpp  DisC++ord.hpp  Embed.cpp  Embed.hpp  Exception.hpp  Exceptions.hpp  Guild.cpp  Guild.hpp  Logger.cpp  Logger.hpp  Makefile  Member.cpp  Member.hpp  Message.cpp  Message.hpp  Optional.hpp  PartialUser.hpp  PermissionOverwrite.cpp  PermissionOverwrite.hpp  PrivateChannel.cpp  PrivateChannel.hpp  README.md  Request.cpp  Request.hpp  Role.cpp  Role.hpp  SecuredSocket.cpp  SecuredWebSocket.cpp  (+16 more)
examples/: test.cpp
include/: Channel.hpp  Client.hpp  DisC++ord.hpp  Embed.hpp  Exceptions.hpp  Member.hpp  PermissionOverwrite.hpp  Permissions.hpp  SecuredSocket.hpp  SendingMessage.hpp  SharedPtr.hpp  Socket.hpp  TextChannel.hpp  VoiceChannel.hpp
src/: Channel.cpp  Client.cpp  Client.hpp  Date.cpp  Guild.hpp  Logger.hpp  Member.cpp  Message.cpp  Optional.hpp  PartialUser.cpp  PartialUser.hpp  Permissions.cpp  PrivateChannel.cpp  Reaction.hpp  Request.hpp  Role.cpp  SecuredSocket.cpp  SecuredWebSocket.cpp  SecuredWebSocket.hpp  SharedPtr.cpp  Snowflake.cpp  Socket.cpp  TextChannel.cpp  User.hpp  VoiceChannel.cpp  endpoints.hpp  platform.hpp
